Fix for product search field and button not aligning with each other on Win8.1 Chrome 39. Ticket DT-1268

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1312,6 +1312,7 @@ footer.bk-footer .footer.bk-footer2 .widget.profile form {
 
 .productlist-filter {
     .form-group {
+	    vertical-align: top;
         @media @mobile {
             width: 100%;
             margin-bottom: 0;
@@ -1335,6 +1336,8 @@ footer.bk-footer .footer.bk-footer2 .widget.profile form {
             border: 1px solid darken(@color-swatch1,10%);
             background-color: darken(@color-swatch1,4%);
             border-radius: 3px;
+            width: 65%;
+			float: left;
         }
         .btn {
             position: relative;
@@ -1343,7 +1346,9 @@ footer.bk-footer .footer.bk-footer2 .widget.profile form {
             margin-left: 2px;
             padding: 0 10px;
             border-radius: 3px;
-        }
+			width: 35%;
+			float: left;
+		}
     }
 }
 
